Fix bug header in light vs dark mode for grid

--- a/app/App.scss
+++ b/app/App.scss
@@ -45,7 +45,6 @@ p {
 }
 thead.k-grid-header tr th.k-header {
   top: 0px !important;
-  background-color: white;
 }
 .link a:active {
   background-color: 555;
